--- a/README
+++ b/README
@@ -1,3 +1,32 @@
+/*
+    Copyright (c) 2012, Fivos Asim
+    All rights reserved.
+    
+    Redistribution and use in source and binary forms, with or without
+    modification, are permitted provided that the following conditions are met: 
+    
+    1. Redistributions of source code must retain the above copyright notice, this
+       list of conditions and the following disclaimer. 
+    2. Redistributions in binary form must reproduce the above copyright notice,
+       this list of conditions and the following disclaimer in the documentation
+       and/or other materials provided with the distribution. 
+    
+    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
+    ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+    
+    The views and conclusions contained in the software and documentation are those
+    of the authors and should not be interpreted as representing official policies, 
+    either expressed or implied, of the FreeBSD Project.
+*/
+
 The Antikythera Simulation android app is an interactive 3D simulation drawn with OpenGLES of the 2 best known models of the Antikythera Mechanism as developed by scientists, and in the same time a showcase of the capabilities of your android powered handset!
 These versions are preliminary ones, without much attention to the relative gear diameters or vertical positions.
 
@@ -6,7 +35,7 @@ You may find the original C project in the link below. It will run on any Window
 http://www.etl.uom.gr/mr/index.php?mypage=antikythera_sim
 The C project is not yet open-sourced but it will become available sometime.
 
-The source code is published free of licenses, so you may use the code freely and for any cause you wish. Using a reference to the original source is encouraged and appreciated. Feel free to fork the program and make it even better. I will gladly commit good patches and acknowledge the contributors.
+The source code is published under the FreeBSD license, so you may use the code freely and for any cause you wish. Using a reference to the original source is encouraged and appreciated. Feel free to fork the program and make it even better. I will gladly commit good patches and acknowledge the contributors.
 
 Thanks for visiting.
 
